--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "include": [
             "lib/**/*.jar",
             "c:\\Program Files\\Weka-3-9-6\\weka-src.jar",
-            "c:\\Program Files\\Weka-3-9-6\\weka.jar"
+            "c:\\Program Files\\Weka-3-9-6\\weka.jar",
+            "c:\\Users\\haingoc\\Weka-3-8-6\\weka.jar"
         ],
         "exclude": [
             "c:\\Program Files\\Weka-3-9-6\\arpack_combined.jar",
