--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
             "c:\\Program Files\\Weka-3-9-6\\weka.jar",
             "lib\\weka.jar",
             "c:\\Program Files\\Weka-3-9-6\\weka-src.jar",
-            "c:\\Program Files\\Weka-3-9-6\\extraTrees.jar"
+            "c:\\Program Files\\Weka-3-9-6\\extraTrees.jar",
+            "lib/extraTrees.jar"
         ],
         "exclude": [
             "c:\\Program Files\\Weka-3-9-6\\arpack_combined.jar",
